configs/monitoring/kube-prometheus-stack/grafana-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://grafana.kube.truebad0ur.space
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "grafana.kube.truebad0ur.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-grafana
          port: 80
